; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mge/extr_if_mge.c_mge_free_dma.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mge/extr_if_mge.c_mge_free_dma.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mge_softc = type { i32, i32, i32, i32, i32 }

@MGE_RX_DESC_NUM = common dso_local global i32 0, align 4
@MGE_TX_DESC_NUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mge_softc*)* @mge_free_dma to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mge_free_dma(%struct.mge_softc* %0) #0 {
  %2 = alloca %struct.mge_softc*, align 8
  store %struct.mge_softc* %0, %struct.mge_softc** %2, align 8
  %3 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %4 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %5 = getelementptr inbounds %struct.mge_softc, %struct.mge_softc* %4, i32 0, i32 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @MGE_RX_DESC_NUM, align 4
  %8 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %9 = getelementptr inbounds %struct.mge_softc, %struct.mge_softc* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @mge_free_desc(%struct.mge_softc* %3, i32 %6, i32 %7, i32 %10, i32 1)
  %12 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %13 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %14 = getelementptr inbounds %struct.mge_softc, %struct.mge_softc* %13, i32 0, i32 3
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @MGE_TX_DESC_NUM, align 4
  %17 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %18 = getelementptr inbounds %struct.mge_softc, %struct.mge_softc* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @mge_free_desc(%struct.mge_softc* %12, i32 %15, i32 %16, i32 %19, i32 0)
  %21 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %22 = getelementptr inbounds %struct.mge_softc, %struct.mge_softc* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @bus_dma_tag_destroy(i32 %23)
  %25 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %26 = getelementptr inbounds %struct.mge_softc, %struct.mge_softc* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @bus_dma_tag_destroy(i32 %27)
  %29 = load %struct.mge_softc*, %struct.mge_softc** %2, align 8
  %30 = getelementptr inbounds %struct.mge_softc, %struct.mge_softc* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @bus_dma_tag_destroy(i32 %31)
  ret void
}

declare dso_local i32 @mge_free_desc(%struct.mge_softc*, i32, i32, i32, i32) #1

declare dso_local i32 @bus_dma_tag_destroy(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
